meshing/ico_meshes.23372.err
  File "ico_meshes.py", line 319
    def generate_mesh(model, comm), scale:
                                  ^
SyntaxError: invalid syntax
